[package]
name = "ketikode-executor"
version = "0.1.0"
authors = ["Andra Antariksa Prihadi <andra.antariksa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
rocket_contrib = "0.4"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }